# Asset_Management_Tools

./: Connect.py  alembic.ini  asset_insert_logic.py  asset_insertion.py  emp.py  employee_insert_logic.py  employee_insertion.py  main.py  model.py  notification.py  notification_insert_logic.py  notify.py  p1.py  pyproject.toml  test1.py  ticket.py
alembic/: env.py
alembic/versions/: 022d80816ced_create_table.py  1989bd5fd18f_change_databases.py  19dac6b643d1_create_table.py  2de28dc5b2a3_removed_foreign_key_connection_from_.py  320b6bd6bb4e_create_notify.py  36cad409211d_create_ticket.py  40919cf4bf8c_create_all_tables.py  50975498a7c3_create_1122.py  5921e6429062_changed_fields_from_ticket_to_asset.py  67dd97590681_create_ticket2.py  7351a4fc4025_initial_migration.py  91b43fabc7a0_revision.py  a07d7cbce890_create_notify.py  a6822af551da_initial_migration.py  b85a7efb783b_create_table.py  c2a9127546b6_create_ticket.py  c4097616ee64_changed_ticket_status.py  c8c9af4f53aa_create_tables.py  d54454cffd47_create_notification.py  d7028fac7dca_initial_migration.py  f3eae3f6d1f9_change_database.py  f462f9b23aab_changed_ticket_status2.py  f97a71e386d7_changed_message_in_notification.py
asset_management/: pyproject.toml
asset_management/asset_management/: alembic.ini  index.html  main.py  schemas.py  test1.py  ticket.py
asset_management/asset_management/mypp/: env.py
asset_management/asset_management/mypp/versions/: 0099c07cd6e3_table_creation.py  2267ed94ed4b_updating_ticket_table.py  7077fcc18e10_changed_field_from_ticket_to_asset.py  b4e6f0101678_changed_field_from_ticket_to_asset.py
assetmanagement/app/: connect.py  main.py
assetmanagement/app/templates/: index.html
mypp/: env.py
mypp/versions/: 983e878ff980_creating_table.py
