[project]
name = "assetmanagement"
version = "0.1.0"
description = ""
authors = [
    {name = "rajnath10009",email = "raj.nath@g10x.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql (>=0.0.3,<0.0.4)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "mysqlclient (>=2.2.6,<3.0.0)",
    "mysql-connector-python (>=9.1.0,<10.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
